k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codespace-ingress
  annotations:
    # Time in seconds to wait for a response from a pod.
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
    # Time in seconds to wait for a response from a pod after connection is established.
    nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
    # Time in seconds to wait for a response from a pod after fully sending the request.
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"

  labels:
    app.kubernetes.io/name: codespace-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api/sandbox"
            backend:
              service:
                name: sandbox-service
                port:
                  number: 80

    - http:
        paths:
          - pathType: Prefix
            path: "/api/ai"
            backend:
              service:
                name: ai-service
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: "/api/auth"
            backend:
              service:
                name: auth-service
                port:
                  number: 80

    - host: "*.preview.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: router-service
                port:
                  number: 80
    - host: "*.agent.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: router-service
                port:
                  number: 80
